2001-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-input-url): Accept the 3rd optional argument.
	(w3m): Improved interactive form.

2001-10-12  Yuuichi Teranishi  <teranisi@gohome.org>,
	    TSUCHIYA Masatoshi <tsuchiya@namazu.org>

	* w3m-e21.el (w3m-form-button-keymap): Renamed from
	`w3m-widget-keymap'.
	(w3m-form-make-button): Fixed.
	(w3m-setup-widget-faces): Revived.

2001-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Always prompts user for a URL string.

2001-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-weather.el (w3m-weather-url-alist): Refer
	`http://weather.yahoo.co.jp'.
	(w3m-weather-default-area): Change default region.
	(w3m-weather-filter-functions): Change default value.
	(w3m-about-weather): Accept `no-cache' argument.
	(w3m-weather-remove-headers): Modified for Yahoo.
	(w3m-weather-remove-footers): Ditto.
	(w3m-weather-insert-title): Ditto.
	(w3m-weather-remove-weather-images): Removed.
	(w3m-weather-remove-washing-images): Removed.
	(w3m-weather-remove-futon-images): Removed.
	(w3m-weather-remove-week-weather-images): Removed.

	* w3m-e21.el (w3m-widget-keymap): New keymap.
	(w3m-form-make-button): Set `w3m-widget-keymap' as keymap on
	buttons; Fix condition to make buttons.
	(w3m-setup-widget-faces): Removed.

2001-10-11  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-make-time): Fix time regexp.
	(shimbun-headers): Ditto.

2001-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-f1express.el, shimbun/sb-fml.el, shimbun/sb-h14m.el,
	shimbun/sb-hns.el, shimbun/sb-impress.el, shimbun/sb-kantei.el,
	shimbun/sb-mainichi.el, shimbun/sb-makanai.el,
	shimbun/sb-mhonarc.el, shimbun/sb-nikkansports.el,
	shimbun/sb-nikkei.el, shimbun/sb-ruby.el,
	shimbun/sb-slashdot-jp.el, shimbun/sb-tcup.el,
	shimbun/sb-vinelinux.el, shimbun/sb-yahoo.el, shimbun/sb-zdnet.el,
	shimbun/shimbun.el, mew-w3m.el, w3m-form.el w3m.el: Remove useless
	whitespaces.
